cambios en javascript

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="tab-pane active" id="profile">
                   <h6>Informacion Usuario</h6>
                   <hr>
-                  <form>
+                  <form id="profileForm">
                     <div class="form-group">
                       <label for="fullName">Nombre y Apellido</label>
                       <input type="text" class="form-control" id="fullName" aria-describedby="fullNameHelp" placeholder="Enter your fullname" value="Maria Ramirez">
@@ -86,7 +86,7 @@
                         </select>
                     </div>
                     <br>
-                    <button type="button" class="btn btn-primary">Actualizar Perfil</button>
+                    <button type="button" class="btn btn-primary" id="updateBtn" >Actualizar Perfil</button>
                   </form>
                 </div>
                 <div class="tab-pane" id="account">
