--- a/login.html
+++ b/login.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="estilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
 <body class="d-flex align-items-center">
     <div class="form-signin w-100 m-auto">
         <img class="mb-4" src="assets/imga.jpg" alt="" width="120" height="130">
@@ -20,17 +18,19 @@
                 <input type="email" class="form-control" id="floatingInput" placeholder="Email" name="email" required>
                 <label for="floatingInput">Correo Electronico</label>
             </div>
+            <br>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña" name="password" required >
                 <label for="floatingPassword">Contraseña</label>
             </div>
-
+            <br>
             <div class="form-check text-start my-3">
                 <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
                     Recuerdame
                 </label>
             </div>
+            <br>
             <button class="btn btn-primary w-100 py-2" type="submit">Acceder</button>
             <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
         </form>
