--- a/html/estudiante.html
+++ b/html/estudiante.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestion Educativa</title>
     <link rel="icon" type="image/x-icon" href="">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -127,6 +127,6 @@
   </table>
 </div>
     
-    <script src="javascript/index.js"></script>
+    <script src="/javascript/index.js"></script>
 </body>
 </html>
